# django-admin-reversefields

./: .editorconfig  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  test_coverage_validation_report.md
.github/: release-drafter.yml
.github/workflows/: docs_deploy.yml  publish_to_pypi.yml  release-drafter.yml  testing.yml
django_admin_reversefields/: __init__.py  mixins.py
docs/: advanced.rst  api.rst  architecture.rst  caveats.rst  concepts.rst  conf.py  configuration.rst  core-concepts.rst  data-integrity.rst  development.rst  glossary.rst  index.rst  permissions-guide.rst  querysets-and-widgets.rst  quickstart.rst  recipes.rst  rendering.rst  requirements.txt
docs/_templates/autosummary/: class.rst  class_admin.rst
tests/: __init__.py  admin.py  models.py  settings.py  shared_test_base.py  test_base_edge_cases.py  test_base_permissions.py  test_base_validation.py  test_base_widgets.py  test_bulk_configuration.py  test_bulk_errors.py  test_bulk_operations.py  test_bulk_transactions.py  test_core_functionality.py  test_edge_cases.py  test_parameterized_operations.py  test_permissions.py  test_signals.py
tests/management/commands/: seed.py
tests/migrations/: 0001_initial.py
tests/parameterized/: test_binding.py  test_permissions.py  test_validation.py  utils.py
